kubernetes/deployment_local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raven-api
  labels:
    app: raven-api
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: raven-api
      version: v1
  template:
    metadata:
      labels:
        app: raven-api
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: raven-api
          image: sgonzmart/raven-api-dev:1.0.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /raven-api/v1/health/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /raven-api/v1/health/
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
