kubernetes/istio-ingress-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-lb
  namespace: istio-system
spec:
  type: LoadBalancer
  selector:
    istio: ingressgateway
  ports:
  - port: 80
    name: http
    targetPort: 8080
  - port: 443
    name: https
    targetPort: 8443
