kubernetes/istio-ingress-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-nodeport
  namespace: istio-system
spec:
  type: NodePort
  selector:
    istio: ingressgateway
  ports:
  - port: 80
    nodePort: 30080
    name: http
    targetPort: 8080
  - port: 443
    nodePort: 30443
    name: https
    targetPort: 8443
