kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: raven-api
  labels:
    app: raven-api
    service: raven-api
spec:
  ports:
  - port: 80
    targetPort: 8000
    name: http
  selector:
    app: raven-api
