kubernetes/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: raven-api-vs
  namespace: default
spec:
  hosts:
  - "orchestrator.idea.lst.tfo.upm.es"
  - "138.4.10.238"
  gateways:
  - raven-gateway
  http:
  # PGAdmin
  - match:
    - uri:
        prefix: /pgadmin
    route:
    - destination:
        host: pgadmin-service.raven-api.svc.cluster.local
        port:
          number: 80
      headers:
        request:
          set:
            X-Script-Name: "/pgadmin"
  # Jaeger
  - match:
    - uri:
        prefix: /jaeger
    route:
    - destination:
        host: jaeger-service.monitoring.svc.cluster.local
        port:
          number: 16686
  # Prometheus
  - match:
    - uri:
        prefix: /prometheus
    route:
    - destination:
        host: prometheus-service.monitoring.svc.cluster.local
        port:
          number: 9090
      headers:
        request:
          set:
            X-Forwarded-Prefix: "/prometheus"
  # Grafana
  - match:
    - uri:
        prefix: /grafana
    route:
    - destination:
        host: grafana-service.monitoring.svc.cluster.local
        port:
          number: 3000
      headers:
        request:
          set:
            X-Forwarded-Prefix: "/grafana"
  - match:
    - uri:
        prefix: /raven-api
    route:
    - destination:
        host: raven-api.raven-api.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /docs
    route:
    - destination:
        host: raven-api.raven-api.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /server
    route:
    - destination:
        host: vantage6server-vantage6-server-service.default.svc.cluster.local
        port:
          number: 7601
      headers:
        response:
          remove:
          - "Access-Control-Allow-Origin"
          add:
            Access-Control-Allow-Origin: "https://idea4rc.kube.franky.codes"
            Access-Control-Allow-Methods: "GET, POST, PUT, DELETE, OPTIONS"
            Access-Control-Allow-Headers: "Content-Type, Authorization, X-Requested-With"
            Access-Control-Allow-Credentials: "true"
  - match:
    - uri:
        prefix: /socket.io
    route:
    - destination:
        host: vantage6server-vantage6-server-service.default.svc.cluster.local
        port:
          number: 7601
      headers:
        response:
          remove:
          - "Access-Control-Allow-Origin"
          add:
            Access-Control-Allow-Origin: "https://idea4rc.kube.franky.codes"
            Access-Control-Allow-Methods: "GET, POST, PUT, DELETE, OPTIONS"
            Access-Control-Allow-Headers: "Content-Type, Authorization, X-Requested-With"
            Access-Control-Allow-Credentials: "true"
  - match:
    - uri:
        prefix: /store
    route:
    - destination:
        host: vantage6store-store-service.default.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: vantage6server-vantage6-frontend-service.default.svc.cluster.local
        port:
          number: 7600
      headers:
        response:
          remove:
          - "content-security-policy"
          - "Content-Security-Policy"
          add:
            Content-Security-Policy: "default-src * 'unsafe-inline' 'unsafe-eval' data: blob:; frame-src *; connect-src *; font-src *; style-src * 'unsafe-inline'; img-src *; script-src * 'unsafe-inline' 'unsafe-eval';"
